[Test] LogIn.cshtml mail send buton

--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Auth/LogIn.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Auth/LogIn.cshtml
@@ -21,3 +21,8 @@
         </div>
     </div>
 </div>
+
+@using (Html.BeginForm("MailSend", "Auth", FormMethod.Post))
+{
+    <button type="submit">Mail Gönder</button>
+}
