--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Index.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Index.cshtml
@@ -1,8 +1,38 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@model HomeCreateStudySessionViewModel
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-lg-6">
+            <form asp-action="Create" asp-controller="Home" method="post" class="needs-validation" novalidate>
+                <div class="form-group">
+                    <label for="Topic">Topic</label>
+                    <input asp-for="Topic" type="text" class="form-control" id="Topic" required>
+                    <div class="invalid-feedback">Topic is required.</div>
+                </div>
+                <div class="form-group">
+                    <label for="CategoryName">Category Name</label>
+                    <input asp-for="CategoryName" type="text" class="form-control" id="CategoryName" required minlength="2">
+                    <div class="invalid-feedback">Category Name is required and must be at least 2 characters long.</div>
+                </div>
+                <div class="form-group">
+                    <label for="CategoryDescription">Category Description</label>
+                    <input asp-for="CategoryDescription" type="text" class="form-control" id="CategoryDescription" required minlength="6">
+                    <div class="invalid-feedback">Category Description is required and must be at least 6 characters long.</div>
+                </div>
+                <br />
+                <div class="form-group">
+                    <label for="time-select">Select Time:</label>
+                    <select id="time-select" name="SelectedTime">
+                        @foreach (var option in Model.TimeOptions)
+                        {
+                            <option value="@option.Value">@option.Text</option>
+                        }
+                    </select>
+                    <div class="invalid-feedback">Gender is required.</div>
+                </div>
+                <br />
+                <button type="submit" class="btn btn-primary">Create Study Session</button>
+            </form>
+        </div>
+    </div>
 </div>
