--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Auth/Register.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Auth/Register.cshtml
@@ -1,5 +1,6 @@
-﻿@using StudyTimer.Domain.Enums
-@model StudyTimer.MVC.Models.AuthViewModel
+﻿@using StudyTimer.MVC.Models.Auth;
+@using StudyTimer.Domain.Enums
+@model AuthViewModel
 
 <div class="container">
     <div class="row justify-content-center">
