--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Auth/LogIn.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Auth/LogIn.cshtml
@@ -1,4 +1,5 @@
-﻿@model StudyTimer.MVC.Models.AuthLoginViewModel
+﻿@using StudyTimer.MVC.Models.Auth;
+@model AuthLoginViewModel
 
 <div class="container">
     <div class="row justify-content-center">
