--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Index.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model HomeCreateStudySessionViewModel
+﻿@using StudyTimer.MVC.Models.Home;
+@model HomeCreateStudySessionViewModel
 
 <div class="container">
     <div class="row justify-content-center">
