--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Statistics.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Statistics.cshtml
@@ -2,15 +2,44 @@
 
 <div class="container">
     <div class="row justify-content-center">
-        <div class="col-lg-6">
+        <div class="col-lg-8">
             <div>
-                <h2>Statistics</h2>
-                <p>Total Study Sessions: @Model.TotalStudySessions</p>
-                <p>Total Study Time: @Model.TotalStudyTime</p>
-                <p>Most Studied Topic: @Model.MostStudiedTopic</p>
-                <p>Total Completed Duties: @Model.TotalCompletedDuties</p>
-                <p>Total Incomplete Duties: @Model.TotalIncompleteDuties</p>
-                <p>Last Study Session Date: @Model.LastStudySessionDate</p>
+                <h2>Dive into Your Learning Journey 🚀</h2>
+                <br />
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>Stat</th>
+                            <th>Value</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Total Study Sessions</td>
+                            <td>@Model.TotalStudySessions</td>
+                        </tr>
+                        <tr>
+                            <td>Total Study Time</td>
+                            <td>@Model.TotalStudyTime</td>
+                        </tr>
+                        <tr>
+                            <td>Most Studied Topic</td>
+                            <td>@Model.MostStudiedTopic</td>
+                        </tr>
+                        <tr>
+                            <td>Total Completed Duties</td>
+                            <td>@Model.TotalCompletedDuties</td>
+                        </tr>
+                        <tr>
+                            <td>Total Incomplete Duties</td>
+                            <td>@Model.TotalIncompleteDuties</td>
+                        </tr>
+                        <tr>
+                            <td>Last Study Session Date</td>
+                            <td>@Model.LastStudySessionDate</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
