--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/AddDuty.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/AddDuty.cshtml
@@ -1,38 +1,37 @@
 ﻿@using StudyTimer.MVC.Models.Home;
 @model HomeCreateStudySessionViewModel
 
-<div class="container">
+<div class="container mt-5">
     <div class="row justify-content-center">
-        <div class="col-lg-6">
+        <div class="col-md-8">
             <form asp-action="Create" asp-controller="Home" method="post" class="needs-validation" novalidate>
-                <div class="form-group">
-                    <label for="Topic">Topic</label>
+                <div class="mb-3">
+                    <label for="Topic" class="form-label">Topic</label>
                     <input asp-for="Topic" type="text" class="form-control" id="Topic" required>
                     <div class="invalid-feedback">Topic is required.</div>
                 </div>
-                <div class="form-group">
-                    <label for="category-select">Select Category:</label>
-                    <select id="category-select" name="SelectedCategoryId">
+                <div class="mb-3">
+                    <label for="category-select" class="form-label">Select Category</label>
+                    <select id="category-select" name="SelectedCategoryId" class="form-select">
                         @foreach (var option in Model.Categories)
                         {
                             <option value="@option.Value">@option.Text</option>
                         }
                     </select>
                 </div>
-                <div class="form-group">
-                    <label for="CategoryName">Category Name</label>
-                    <input asp-for="CategoryName" type="text" class="form-control" id="CategoryName" minlength="2">
+                <div class="mb-3">
+                    <label for="CategoryName" class="form-label">Category Name</label>
+                    <input asp-for="CategoryName" type="text" class="form-control" id="CategoryName" minlength="2" required>
                     <div class="invalid-feedback">Category Name is required and must be at least 2 characters long.</div>
                 </div>
-                <div class="form-group">
-                    <label for="CategoryDescription">Category Description</label>
-                    <input asp-for="CategoryDescription" type="text" class="form-control" id="CategoryDescription" minlength="6">
+                <div class="mb-3">
+                    <label for="CategoryDescription" class="form-label">Category Description</label>
+                    <input asp-for="CategoryDescription" type="text" class="form-control" id="CategoryDescription" minlength="6" required>
                     <div class="invalid-feedback">Category Description is required and must be at least 6 characters long.</div>
                 </div>
-                <br />
-                <div class="form-group">
-                    <label for="time-select">Select Time:</label>
-                    <select id="time-select" name="SelectedTime">
+                <div class="mb-3">
+                    <label for="time-select" class="form-label">Select Time</label>
+                    <select id="time-select" name="SelectedTime" class="form-select">
                         @foreach (var option in Model.TimeOptions)
                         {
                             <option value="@option.Value">@option.Text</option>
@@ -40,7 +39,6 @@
                     </select>
                     <div class="invalid-feedback">Time is required.</div>
                 </div>
-                <br />
                 <button type="submit" class="btn btn-primary">Create Study Session</button>
             </form>
         </div>
