--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Shared/_LayoutPartial.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Shared/_LayoutPartial.cshtml
@@ -34,6 +34,9 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddDuty">Add Duty</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Statistics">Statistics</a>
+                            </li>
+                            <li class="nav-item">
                                 <form id="logoutForm" asp-controller="Auth" asp-action="Logout" method="post">
                                     <button type="submit" class="nav-link btn btn-link text-dark">Çıkış Yap</button>
                                 </form>
