--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Index.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Index.cshtml
@@ -1,17 +1,39 @@
-﻿
-<body class="bg-gray-300 text-gray-800 h-screen flex flex-col justify-center items-center space-y-8">
-    <div id="emojis-container" class="relative w-full h-[480px]">
+﻿<style>
+   body {
+    background-color: #D1D5DB; /* bg-gray-300 */
+    color: #1F2937; /* text-gray-800 */
+}
+
+/* Emoji ve diğer öğeler için özel stil */
+.emoji {
+    position: absolute;
+    /* Emoji için özel pozisyonlandırma ekleyin */
+}
+
+    .custom-page-container {
+        display: flex;
+        flex-direction: column;
+      /*   justify-content: center;
+        align-items: center; */
+        height: 100vh;
+    }
+</style>
+
+<div class="custom-page-container">
+    <div id="emojis-container" style="position: relative; width: 100%; height: 480px;">
         <div id="emoji1" class="emoji">🌍</div>
         <div id="emoji2" class="emoji">🌖</div>
     </div>
-    <h1 class="text-5xl font-bold">Welcome to Study Timer Cosmos 🌌 </h1>
-    <p class="text-xl">Embark on an astronomical adventure! 🚀 </p>
-    <div id="emojis-container" class="relative w-full h-[480px]">
+    <h1 class="display-4 font-weight-bold">Welcome to Study Timer Cosmos 🌌</h1>
+    <p class="lead">Embark on an astronomical adventure! 🚀</p>
+    <div id="emojis-container" style="position: relative; width: 100%; height: 480px;">
         <div id="emoji3" class="emoji">🌌</div>
         <div id="emoji4" class="emoji">🪐</div>
         <div id="emoji5" class="emoji">🌠</div>
         <div id="emoji6" class="emoji">🌕</div>
     </div>
+</div>
+
 
     <script>
         const emojis = document.querySelectorAll('.emoji');
@@ -36,4 +58,3 @@
 
         animateEmojis();
     </script>
-</body>
