[update] background home index

--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Index.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Index.cshtml
@@ -19,6 +19,15 @@
     }
 </style>
 
+<style>
+    body {
+        background: url('https://source.unsplash.com/1920x1080/?space') no-repeat center center fixed;
+        background-size: cover;
+        color: white;
+        font-family: sans-serif;
+    }
+</style>
+
 <div class="custom-page-container">
     <div id="emojis-container" style="position: relative; width: 100%; height: 480px;">
         <div id="emoji1" class="emoji">🌍</div>
