[update] navbar names

--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Shared/_LayoutPartial.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Shared/_LayoutPartial.cshtml
@@ -40,17 +40,17 @@
                             </li>
                             <li class="nav-item">
                                 <form id="logoutForm" asp-controller="Auth" asp-action="Logout" method="post">
-                                    <button type="submit" class="nav-link btn btn-link text-dark">Çıkış Yap</button>
+                                    <button type="submit" class="nav-link btn btn-link text-dark">Log out</button>
                                 </form>
                             </li>
                         }
                         else
                         {
                             <li class="nav-item">
-                                <a href="/auth/login" class="nav-link text-dark">Giriş Yap</a>
+                                <a href="/auth/login" class="nav-link text-dark">Login</a>
                             </li>
                             <li class="nav-item">
-                                <a href="/auth/register" class="nav-link text-dark">Kayıt Ol</a>
+                                <a href="/auth/register" class="nav-link text-dark">Register</a>
                             </li>
                         }
                     </ul>
