[update] StudySession background and layout navbar name

--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/StudySession.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/StudySession.cshtml
@@ -15,6 +15,13 @@
 
     <style>
 
+        body {
+            background: url('https://images.unsplash.com/photo-1583446689741-b39fa2703b22?crop=entropy&cs=tinysrgb&fit=crop&fm=jpg&h=1080&ixid=MnwxfDB8MXxyYW5kb218MHx8c3BhY2V8fHx8fHwxNzAzMDM1Njk3&ixlib=rb-4.0.3&q=80&w=1920') no-repeat center center fixed;
+            background-size: cover;
+            color: white;
+            font-family: sans-serif;
+        }
+
 
         #rocket-container {
             position: relative;
@@ -91,7 +98,7 @@
     </div>
 
     <div class="flex mt-4 mb-4">
-        <div id="timer" class="text-4xl mt-4 text-black p-4 rounded-lg">Time remaining: 00:00</div>
+        <div id="timer" class="text-4xl mt-4 text-white p-4 rounded-lg">Time remaining: 00:00</div>
 
     </div>
 
