--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Shared/_LayoutPartial.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Shared/_LayoutPartial.cshtml
@@ -33,7 +33,7 @@
                         @if (SignInManager.IsSignedIn(User))
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddDuty">Add Duty</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AddDuty">Start Study</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Statistics">Statistics</a>
