[update ] frontend header

--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/AddDuty.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/AddDuty.cshtml
@@ -4,8 +4,13 @@
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-8">
+           
+                <div class="text-center">
+                    <h1 class="text-4xl mb-1">🪐 Study Timer</h1>
+                    <p class="text-x mb-4">Focus on your studies among the stars!</p>
+                </div>
             <form asp-action="AddDuty" asp-controller="Home" method="post" class="needs-validation" novalidate>
-                <h2 class="text-center mb-4">Create Your Study Session 🚀</h2>
+                <h2 class="text-center mb-4">🔥Create Your Study Session🚀 </h2>
 
                 <!-- Topic -->
                 <div class="form-group mb-3">
