--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Statistics.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/Statistics.cshtml
@@ -4,6 +4,10 @@
     <div class="row justify-content-center">
         <div class="col-lg-8">
             <div>
+                <div class="text-center">
+                    <h1 class="text-4xl mb-1">🪐 Study Timer</h1>
+                    <p class="text-x mb-4">Focus on your studies among the stars!</p>
+                </div>
                 <h2 class="text-center mb-4">🚀 Dive into Your Learning Journey 📚</h2>
                 <table class="table table-bordered table-striped table-hover">
                     <thead class="thead-dark">
