--- a/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/StudySession.cshtml
+++ b/StudyTimer/Presentation/StudyTimer.MVC/Views/Home/StudySession.cshtml
@@ -174,6 +174,11 @@
 
         const initialTimeInSeconds = @Model.SelectedTime * 60; // Set the initial countdown time in seconds
         const myTimer = countdownTimer(initialTimeInSeconds);
+
+        window.onload = function () {
+            startRocket(); // Sayfa yüklendiğinde zamanlayıcıyı başlat
+        };
+
     </script>
 </body>
 </html>
